k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: securecloud-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: securecloud
  template:
    metadata:
      labels:
        app: securecloud
    spec:
      containers:
      - name: securecloud
        image: securecloud-devsecops-platform:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
