k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: securecloud-service

spec:
  selector:
    app: securecloud

  type: NodePort

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
