k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: securecloud-ingress
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: securecloud-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: securecloud-backend-service
            port:
              number: 5000
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: securecloud-backend-service
            port:
              number: 5000
